# co9as-cogutil

./: CLAUDE.MD  CMakeLists.txt
3p/: .gitignore  CMakeLists.txt  README.md  build_3p.sh
cmake/: FindBFD.cmake  FindCxxtest.cmake  FindIberty.cmake
opencog/util/: CMakeLists.txt  tensor.h  tensor_atom.h  tensor_logic.h  tensor_space.h
